setup/challenge-istio/2-weight-based-routing/c2-ingress-rr-v2-50weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
  namespace: challengeistio
spec:
  hosts:
  - calcbackendsvc
  http:
    - route:
      - destination:
          host: calcbackendsvc
          subset: v1
        weight: 21
      - destination:
          host: calcbackendsvc
          subset: v2
        weight: 79
